# zkek

./: .gitignore  CMakeLists.txt  README.md  configure.ac
src/: Makefile.am  main.cpp  miner.cpp  standaloneminer.cpp  standaloneminer_copy.cpp
src/crypto/: equihash.cpp
src/json/: json_spirit_value.h
src/lib/: stacktrace.h
src/libstratum/: StratumClient.cpp  StratumClient.h  StratumClient_copy.cpp  ZcashStratum.cpp  ZcashStratum.h
src/primitives/: block.h
zcutil/: build.sh
