# cmake_minimum_required(VERSION <specify CMake version here>)
project(zcash_standalone_miner)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    .tx/config
    build-aux/m4/ax_boost_base.m4
    build-aux/m4/ax_boost_chrono.m4
    build-aux/m4/ax_boost_filesystem.m4
    build-aux/m4/ax_boost_program_options.m4
    build-aux/m4/ax_boost_system.m4
    build-aux/m4/ax_boost_thread.m4
    build-aux/m4/ax_boost_unit_test_framework.m4
    build-aux/m4/ax_check_compile_flag.m4
    build-aux/m4/ax_check_link_flag.m4
    build-aux/m4/ax_check_preproc_flag.m4
    build-aux/m4/ax_gcc_func_attribute.m4
    build-aux/m4/ax_pthread.m4
    build-aux/m4/bitcoin_find_bdb48.m4
    build-aux/m4/bitcoin_qt.m4
    build-aux/m4/bitcoin_subdir_to_include.m4
    contrib/bitrpc/bitrpc.py
    contrib/bitrpc/README.md
    contrib/debian/examples/bitcoin.conf
    contrib/debian/manpages/bitcoin-cli.1
    contrib/debian/manpages/bitcoin-qt.1
    contrib/debian/manpages/bitcoin.conf.5
    contrib/debian/manpages/bitcoind.1
    contrib/debian/patches/README
    contrib/debian/patches/series
    contrib/debian/source/format
    contrib/debian/bitcoin-qt.desktop
    contrib/debian/bitcoin-qt.install
    contrib/debian/bitcoin-qt.lintian-overrides
    contrib/debian/bitcoin-qt.protocol
    contrib/debian/bitcoin-tx.install
    contrib/debian/bitcoind.bash-completion
    contrib/debian/bitcoind.examples
    contrib/debian/bitcoind.install
    contrib/debian/bitcoind.lintian-overrides
    contrib/debian/bitcoind.manpages
    contrib/debian/changelog
    contrib/debian/compat
    contrib/debian/control
    contrib/debian/copyright
    contrib/debian/gbp.conf
    contrib/debian/README.md
    contrib/debian/rules
    contrib/debian/watch
    contrib/devtools/fix-copyright-headers.py
    contrib/devtools/git-subtree-check.sh
    contrib/devtools/github-merge.sh
    contrib/devtools/optimize-pngs.py
    contrib/devtools/README.md
    contrib/devtools/security-check.py
    contrib/devtools/symbol-check.py
    contrib/devtools/test-security-check.py
    contrib/devtools/update-translations.py
    contrib/gitian-descriptors/gitian-linux.yml
    contrib/gitian-descriptors/gitian-osx-signer.yml
    contrib/gitian-descriptors/gitian-osx.yml
    contrib/gitian-descriptors/gitian-win-signer.yml
    contrib/gitian-descriptors/gitian-win.yml
    contrib/gitian-descriptors/README.md
    contrib/gitian-downloader/aschildbach-key.pgp
    contrib/gitian-downloader/bluematt-key.pgp
    contrib/gitian-downloader/cfields-key.pgp
    contrib/gitian-downloader/devrandom-key.pgp
    contrib/gitian-downloader/fanquake-key.pgp
    contrib/gitian-downloader/gavinandresen-key.pgp
    contrib/gitian-downloader/jonasschnelli-key.pgp
    contrib/gitian-downloader/laanwj-key.pgp
    contrib/gitian-downloader/linux-download-config
    contrib/gitian-downloader/luke-jr-key.pgp
    contrib/gitian-downloader/michagogo-key.pgp
    contrib/gitian-downloader/sipa-key.pgp
    contrib/gitian-downloader/tcatm-key.pgp
    contrib/gitian-downloader/win32-download-config
    contrib/gitian-downloader/wtogami-key.pgp
    contrib/init/bitcoind.conf
    contrib/init/bitcoind.init
    contrib/init/bitcoind.openrc
    contrib/init/bitcoind.openrcconf
    contrib/init/bitcoind.service
    contrib/init/README.md
    contrib/linearize/example-linearize.cfg
    contrib/linearize/linearize-data.py
    contrib/linearize/linearize-hashes.py
    contrib/linearize/README.md
    contrib/macdeploy/Base.lproj/InfoPlist.strings
    contrib/macdeploy/background.png
    contrib/macdeploy/background.psd
    contrib/macdeploy/background.tiff
    contrib/macdeploy/background@2x.png
    contrib/macdeploy/detached-sig-apply.sh
    contrib/macdeploy/detached-sig-create.sh
    contrib/macdeploy/DS_Store
    contrib/macdeploy/fancy.plist
    contrib/macdeploy/LICENSE
    contrib/macdeploy/macdeployqtplus
    contrib/macdeploy/README.md
    contrib/qos/README.md
    contrib/qos/tc.sh
    contrib/seeds/generate-seeds.py
    contrib/seeds/makeseeds.py
    contrib/seeds/nodes_main.txt
    contrib/seeds/nodes_test.txt
    contrib/seeds/README.md
    contrib/spendfrom/README.md
    contrib/spendfrom/setup.py
    contrib/spendfrom/spendfrom.py
    contrib/test-patches/README.md
    contrib/test-patches/temp-revert-2.patch
    contrib/testgen/base58.py
    contrib/testgen/gen_base58_test_vectors.py
    contrib/testgen/README.md
    contrib/verify-commits/gpg.sh
    contrib/verify-commits/pre-push-hook.sh
    contrib/verify-commits/trusted-git-root
    contrib/verify-commits/trusted-keys
    contrib/verify-commits/verify-commits.sh
    contrib/verifysfbinaries/README.md
    contrib/verifysfbinaries/verify.sh
    contrib/bitcoin-qt.pro
    contrib/bitcoind.bash-completion
    contrib/qt_translations.py
    contrib/README.md
    contrib/tidy_datadir.sh
    depends/builders/darwin.mk
    depends/builders/default.mk
    depends/builders/linux.mk
    depends/hosts/darwin.mk
    depends/hosts/default.mk
    depends/hosts/linux.mk
    depends/hosts/mingw32.mk
    depends/packages/bdb.mk
    depends/packages/boost.mk
    depends/packages/dbus.mk
    depends/packages/expat.mk
    depends/packages/fontconfig.mk
    depends/packages/freetype.mk
    depends/packages/googlemock.mk
    depends/packages/googletest.mk
    depends/packages/libgmp.mk
    depends/packages/libICE.mk
    depends/packages/libSM.mk
    depends/packages/libsnark.mk
    depends/packages/libsodium.mk
    depends/packages/libX11.mk
    depends/packages/libXau.mk
    depends/packages/libxcb.mk
    depends/packages/libXext.mk
    depends/packages/miniupnpc.mk
    depends/packages/native_ccache.mk
    depends/packages/native_cdrkit.mk
    depends/packages/native_libdmg-hfsplus.mk
    depends/packages/native_protobuf.mk
    depends/packages/openssl.mk
    depends/packages/packages.mk
    depends/packages/protobuf.mk
    depends/packages/qrencode.mk
    depends/packages/qt46.mk
    depends/packages/xcb_proto.mk
    depends/packages/xextproto.mk
    depends/packages/xproto.mk
    depends/packages/xtrans.mk
    depends/patches/boost/deprecated_auto_ptr.patch
    depends/patches/native_cdrkit/cdrkit-deterministic.patch
    depends/patches/qt/fix-xcb-include-order.patch
    depends/patches/qt/mac-qmake.conf
    depends/patches/qt/mingw-uuidof.patch
    depends/patches/qt46/stlfix.patch
    depends/.gitignore
    depends/config.guess
    depends/config.site.in
    depends/config.sub
    depends/description.md
    depends/funcs.mk
    depends/Makefile
    depends/packages.md
    depends/README.md
    doc/release-notes/release-notes-0.10.0.md
    doc/release-notes/release-notes-0.10.1.md
    doc/release-notes/release-notes-0.10.2.md
    doc/release-notes/release-notes-0.10.3.md
    doc/release-notes/release-notes-0.11.1.md
    doc/release-notes/release-notes-0.11.2.z2.md
    doc/release-notes/release-notes-0.11.2.z3.md
    doc/release-notes/release-notes-0.11.2.z4.md
    doc/release-notes/release-notes-0.11.2.z5.md
    doc/release-notes/release-notes-0.11.2.z6.md
    doc/release-notes/release-notes-0.11.2.z7.md
    doc/release-notes/release-notes-0.11.2.z8.md
    doc/release-notes/release-notes-0.11.2.z9.md
    doc/release-notes/release-notes-0.3.12.md
    doc/release-notes/release-notes-0.3.13.md
    doc/release-notes/release-notes-0.3.14.md
    doc/release-notes/release-notes-0.3.15.md
    doc/release-notes/release-notes-0.3.16.md
    doc/release-notes/release-notes-0.3.17.md
    doc/release-notes/release-notes-0.3.18.md
    doc/release-notes/release-notes-0.3.19.md
    doc/release-notes/release-notes-0.3.20.1.md
    doc/release-notes/release-notes-0.3.20.2.md
    doc/release-notes/release-notes-0.3.20.md
    doc/release-notes/release-notes-0.3.21.md
    doc/release-notes/release-notes-0.3.22.md
    doc/release-notes/release-notes-0.3.23.md
    doc/release-notes/release-notes-0.3.24.md
    doc/release-notes/release-notes-0.4.0.md
    doc/release-notes/release-notes-0.4.1.md
    doc/release-notes/release-notes-0.4.2.md
    doc/release-notes/release-notes-0.4.3.md
    doc/release-notes/release-notes-0.4.4.md
    doc/release-notes/release-notes-0.4.5.md
    doc/release-notes/release-notes-0.4.6.md
    doc/release-notes/release-notes-0.5.0.md
    doc/release-notes/release-notes-0.5.1.md
    doc/release-notes/release-notes-0.5.2.md
    doc/release-notes/release-notes-0.5.3.md
    doc/release-notes/release-notes-0.5.4.md
    doc/release-notes/release-notes-0.5.5.md
    doc/release-notes/release-notes-0.6.0.md
    doc/release-notes/release-notes-0.6.1.md
    doc/release-notes/release-notes-0.6.2.md
    doc/release-notes/release-notes-0.6.3.md
    doc/release-notes/release-notes-0.7.0.md
    doc/release-notes/release-notes-0.7.1.md
    doc/release-notes/release-notes-0.7.2.md
    doc/release-notes/release-notes-0.8.0.md
    doc/release-notes/release-notes-0.8.1.md
    doc/release-notes/release-notes-0.8.2.md
    doc/release-notes/release-notes-0.8.3.md
    doc/release-notes/release-notes-0.8.4.md
    doc/release-notes/release-notes-0.8.5.md
    doc/release-notes/release-notes-0.8.6.md
    doc/release-notes/release-notes-0.9.0.md
    doc/release-notes/release-notes-0.9.1.md
    doc/release-notes/release-notes-0.9.2.1.md
    doc/release-notes/release-notes-0.9.2.md
    doc/release-notes/release-notes-0.9.3.md
    doc/release-notes/release-notes-0.9.4.md
    doc/release-notes/release-notes-0.9.5.md
    doc/release-notes/release-notes-1.0.0-beta1.md
    doc/release-notes/release-notes-1.0.0-beta2.md
    doc/assets-attribution.md
    doc/bips.md
    doc/bitcoin_logo_doxygen.png
    doc/build-unix.md
    doc/developer-notes.md
    doc/dnsseed-policy.md
    doc/Doxyfile
    doc/files.md
    doc/init.md
    doc/multiwallet-qt.md
    doc/payment-api.md
    doc/README.md
    doc/release-notes.md
    doc/release-process.md
    doc/REST-interface.md
    doc/security-warnings.md
    doc/tor.md
    doc/translation_process.md
    doc/translation_strings_policy.md
    doc/unit-tests.md
    qa/pull-tester/rpc-tests.sh
    qa/pull-tester/run-bitcoin-cli
    qa/pull-tester/run-bitcoind-for-test.sh.in
    qa/pull-tester/tests-config.sh.in
    qa/rpc-tests/test_framework/__init__.py
    qa/rpc-tests/test_framework/authproxy.py
    qa/rpc-tests/test_framework/bignum.py
    qa/rpc-tests/test_framework/blockstore.py
    qa/rpc-tests/test_framework/blocktools.py
    qa/rpc-tests/test_framework/comptool.py
    qa/rpc-tests/test_framework/mininode.py
    qa/rpc-tests/test_framework/netutil.py
    qa/rpc-tests/test_framework/script.py
    qa/rpc-tests/test_framework/socks5.py
    qa/rpc-tests/test_framework/test_framework.py
    qa/rpc-tests/test_framework/util.py
    qa/rpc-tests/.gitignore
    qa/rpc-tests/bip65-cltv-p2p.py
    qa/rpc-tests/bip65-cltv.py
    qa/rpc-tests/bipdersig-p2p.py
    qa/rpc-tests/bipdersig.py
    qa/rpc-tests/forknotify.py
    qa/rpc-tests/getblocktemplate_longpoll.py
    qa/rpc-tests/getblocktemplate_proposals.py
    qa/rpc-tests/getchaintips.py
    qa/rpc-tests/hardforkdetection.py
    qa/rpc-tests/httpbasics.py
    qa/rpc-tests/invalidateblock.py
    qa/rpc-tests/invalidblockrequest.py
    qa/rpc-tests/keypool.py
    qa/rpc-tests/listtransactions.py
    qa/rpc-tests/maxblocksinflight.py
    qa/rpc-tests/mempool_coinbase_spends.py
    qa/rpc-tests/mempool_resurrect_test.py
    qa/rpc-tests/mempool_spendcoinbase.py
    qa/rpc-tests/merkle_blocks.py
    qa/rpc-tests/p2p-acceptblock.py
    qa/rpc-tests/proxy_test.py
    qa/rpc-tests/pruning.py
    qa/rpc-tests/rawtransactions.py
    qa/rpc-tests/README.md
    qa/rpc-tests/receivedby.py
    qa/rpc-tests/reindex.py
    qa/rpc-tests/rest.py
    qa/rpc-tests/rpcbind_test.py
    qa/rpc-tests/script_test.py
    qa/rpc-tests/signrawtransactions.py
    qa/rpc-tests/smartfees.py
    qa/rpc-tests/txn_doublespend.py
    qa/rpc-tests/wallet.py
    qa/rpc-tests/walletbackup.py
    qa/rpc-tests/zapwallettxes.py
    qa/rpc-tests/zcjoinsplit.py
    qa/rpc-tests/zcjoinsplitdoublespend.py
    qa/zcash/check-security-hardening.sh
    qa/zcash/checksec.sh
    qa/zcash/ensure-no-dot-so-in-depends.py
    qa/zcash/full-test-suite.sh
    qa/zcash/performance-measurements.sh
    qa/zcash/test-depends-sources-mirror.py
    share/certs/BitcoinFoundation_Apple_Cert.pem
    share/certs/BitcoinFoundation_Comodo_Cert.pem
    share/certs/PrivateKeyNotes.md
    share/pixmaps/addressbook16.bmp
    share/pixmaps/addressbook16mask.bmp
    share/pixmaps/addressbook20.bmp
    share/pixmaps/addressbook20mask.bmp
    share/pixmaps/bitcoin-bc.ico
    share/pixmaps/bitcoin.ico
    share/pixmaps/bitcoin128.png
    share/pixmaps/bitcoin128.xpm
    share/pixmaps/bitcoin16.png
    share/pixmaps/bitcoin16.xpm
    share/pixmaps/bitcoin256.png
    share/pixmaps/bitcoin256.xpm
    share/pixmaps/bitcoin32.png
    share/pixmaps/bitcoin32.xpm
    share/pixmaps/bitcoin64.png
    share/pixmaps/bitcoin64.xpm
    share/pixmaps/check.ico
    share/pixmaps/favicon.ico
    share/pixmaps/nsis-header.bmp
    share/pixmaps/nsis-wizard.bmp
    share/pixmaps/send16.bmp
    share/pixmaps/send16mask.bmp
    share/pixmaps/send16masknoshadow.bmp
    share/pixmaps/send20.bmp
    share/pixmaps/send20mask.bmp
    share/qt/img/reload.png
    share/qt/img/reload.xcf
    share/qt/extract_strings_qt.py
    share/qt/Info.plist.in
    share/qt/make_spinner.py
    share/qt/make_windows_icon.sh
    share/qt/protobuf.pri
    share/genbuild.sh
    share/setup.nsi.in
    share/ui.rc
    src/compat/byteswap.h
    src/compat/endian.h
    src/compat/glibc_compat.cpp
    src/compat/glibc_sanity.cpp
    src/compat/glibcxx_sanity.cpp
    src/compat/sanity.h
    src/compat/strnlen.cpp
    src/config/.empty
    src/consensus/consensus.h
    src/consensus/params.h
    src/consensus/validation.h
    src/crypto/common.h
    src/crypto/equihash.cpp
    src/crypto/equihash.h
    src/crypto/equihash.tcc
    src/crypto/hmac_sha256.cpp
    src/crypto/hmac_sha256.h
    src/crypto/hmac_sha512.cpp
    src/crypto/hmac_sha512.h
    src/crypto/ripemd160.cpp
    src/crypto/ripemd160.h
    src/crypto/sha1.cpp
    src/crypto/sha1.h
    src/crypto/sha256.cpp
    src/crypto/sha256.h
    src/crypto/sha512.cpp
    src/crypto/sha512.h
    src/gtest/json_test_vectors.cpp
    src/gtest/json_test_vectors.h
    src/gtest/main.cpp
    src/gtest/test_block.cpp
    src/gtest/test_checktransaction.cpp
    src/gtest/test_circuit.cpp
    src/gtest/test_equihash.cpp
    src/gtest/test_foundersreward.cpp
    src/gtest/test_joinsplit.cpp
    src/gtest/test_jsonspirit.cpp
    src/gtest/test_keystore.cpp
    src/gtest/test_libzcash_utils.cpp
    src/gtest/test_merkletree.cpp
    src/gtest/test_noteencryption.cpp
    src/gtest/test_pow.cpp
    src/gtest/test_proofs.cpp
    src/gtest/test_rpc.cpp
    src/gtest/test_tautology.cpp
    src/gtest/test_txid.cpp
    src/gtest/test_wallet_zkeys.cpp
    src/json/json_spirit.h
    src/json/json_spirit_error_position.h
    src/json/json_spirit_reader.cpp
    src/json/json_spirit_reader.h
    src/json/json_spirit_reader_template.h
    src/json/json_spirit_stream_reader.h
    src/json/json_spirit_utils.h
    src/json/json_spirit_value.cpp
    src/json/json_spirit_value.h
    src/json/json_spirit_writer.cpp
    src/json/json_spirit_writer.h
    src/json/json_spirit_writer_template.h
    src/json/LICENSE.txt
    src/leveldb/db/autocompact_test.cc
    src/leveldb/db/builder.cc
    src/leveldb/db/builder.h
    src/leveldb/db/c.cc
    src/leveldb/db/c_test.c
    src/leveldb/db/corruption_test.cc
    src/leveldb/db/db_bench.cc
    src/leveldb/db/db_impl.cc
    src/leveldb/db/db_impl.h
    src/leveldb/db/db_iter.cc
    src/leveldb/db/db_iter.h
    src/leveldb/db/db_test.cc
    src/leveldb/db/dbformat.cc
    src/leveldb/db/dbformat.h
    src/leveldb/db/dbformat_test.cc
    src/leveldb/db/dumpfile.cc
    src/leveldb/db/filename.cc
    src/leveldb/db/filename.h
    src/leveldb/db/filename_test.cc
    src/leveldb/db/leveldb_main.cc
    src/leveldb/db/log_format.h
    src/leveldb/db/log_reader.cc
    src/leveldb/db/log_reader.h
    src/leveldb/db/log_test.cc
    src/leveldb/db/log_writer.cc
    src/leveldb/db/log_writer.h
    src/leveldb/db/memtable.cc
    src/leveldb/db/memtable.h
    src/leveldb/db/repair.cc
    src/leveldb/db/skiplist.h
    src/leveldb/db/skiplist_test.cc
    src/leveldb/db/snapshot.h
    src/leveldb/db/table_cache.cc
    src/leveldb/db/table_cache.h
    src/leveldb/db/version_edit.cc
    src/leveldb/db/version_edit.h
    src/leveldb/db/version_edit_test.cc
    src/leveldb/db/version_set.cc
    src/leveldb/db/version_set.h
    src/leveldb/db/version_set_test.cc
    src/leveldb/db/write_batch.cc
    src/leveldb/db/write_batch_internal.h
    src/leveldb/db/write_batch_test.cc
    src/leveldb/doc/bench/db_bench_sqlite3.cc
    src/leveldb/doc/bench/db_bench_tree_db.cc
    src/leveldb/doc/benchmark.html
    src/leveldb/doc/doc.css
    src/leveldb/doc/impl.html
    src/leveldb/doc/index.html
    src/leveldb/doc/log_format.txt
    src/leveldb/doc/table_format.txt
    src/leveldb/helpers/memenv/memenv.cc
    src/leveldb/helpers/memenv/memenv.h
    src/leveldb/helpers/memenv/memenv_test.cc
    src/leveldb/include/leveldb/c.h
    src/leveldb/include/leveldb/cache.h
    src/leveldb/include/leveldb/comparator.h
    src/leveldb/include/leveldb/db.h
    src/leveldb/include/leveldb/dumpfile.h
    src/leveldb/include/leveldb/env.h
    src/leveldb/include/leveldb/filter_policy.h
    src/leveldb/include/leveldb/iterator.h
    src/leveldb/include/leveldb/options.h
    src/leveldb/include/leveldb/slice.h
    src/leveldb/include/leveldb/status.h
    src/leveldb/include/leveldb/table.h
    src/leveldb/include/leveldb/table_builder.h
    src/leveldb/include/leveldb/write_batch.h
    src/leveldb/issues/issue178_test.cc
    src/leveldb/issues/issue200_test.cc
    src/leveldb/port/win/stdint.h
    src/leveldb/port/atomic_pointer.h
    src/leveldb/port/port.h
    src/leveldb/port/port_example.h
    src/leveldb/port/port_posix.cc
    src/leveldb/port/port_posix.h
    src/leveldb/port/port_win.cc
    src/leveldb/port/port_win.h
    src/leveldb/port/README
    src/leveldb/port/thread_annotations.h
    src/leveldb/table/block.cc
    src/leveldb/table/block.h
    src/leveldb/table/block_builder.cc
    src/leveldb/table/block_builder.h
    src/leveldb/table/filter_block.cc
    src/leveldb/table/filter_block.h
    src/leveldb/table/filter_block_test.cc
    src/leveldb/table/format.cc
    src/leveldb/table/format.h
    src/leveldb/table/iterator.cc
    src/leveldb/table/iterator_wrapper.h
    src/leveldb/table/merger.cc
    src/leveldb/table/merger.h
    src/leveldb/table/table.cc
    src/leveldb/table/table_builder.cc
    src/leveldb/table/table_test.cc
    src/leveldb/table/two_level_iterator.cc
    src/leveldb/table/two_level_iterator.h
    src/leveldb/util/arena.cc
    src/leveldb/util/arena.h
    src/leveldb/util/arena_test.cc
    src/leveldb/util/bloom.cc
    src/leveldb/util/bloom_test.cc
    src/leveldb/util/cache.cc
    src/leveldb/util/cache_test.cc
    src/leveldb/util/coding.cc
    src/leveldb/util/coding.h
    src/leveldb/util/coding_test.cc
    src/leveldb/util/comparator.cc
    src/leveldb/util/crc32c.cc
    src/leveldb/util/crc32c.h
    src/leveldb/util/crc32c_test.cc
    src/leveldb/util/env.cc
    src/leveldb/util/env_posix.cc
    src/leveldb/util/env_test.cc
    src/leveldb/util/env_win.cc
    src/leveldb/util/filter_policy.cc
    src/leveldb/util/hash.cc
    src/leveldb/util/hash.h
    src/leveldb/util/hash_test.cc
    src/leveldb/util/histogram.cc
    src/leveldb/util/histogram.h
    src/leveldb/util/logging.cc
    src/leveldb/util/logging.h
    src/leveldb/util/mutexlock.h
    src/leveldb/util/options.cc
    src/leveldb/util/posix_logger.h
    src/leveldb/util/random.h
    src/leveldb/util/status.cc
    src/leveldb/util/testharness.cc
    src/leveldb/util/testharness.h
    src/leveldb/util/testutil.cc
    src/leveldb/util/testutil.h
    src/leveldb/.gitignore
    src/leveldb/AUTHORS
    src/leveldb/build_detect_platform
    src/leveldb/CONTRIBUTING.md
    src/leveldb/LICENSE
    src/leveldb/Makefile
    src/leveldb/NEWS
    src/leveldb/README
    src/leveldb/README.md
    src/leveldb/TODO
    src/leveldb/WINDOWS.md
    src/libstratum/StratumClient.cpp
    src/libstratum/StratumClient.h
    src/libstratum/ZcashStratum.cpp
    src/libstratum/ZcashStratum.h
    src/obj/.gitignore
    src/obj-test/.gitignore
    src/policy/fees.cpp
    src/policy/fees.h
    src/primitives/block.cpp
    src/primitives/block.h
    src/primitives/transaction.cpp
    src/primitives/transaction.h
    src/qt/forms/addressbookpage.ui
    src/qt/forms/askpassphrasedialog.ui
    src/qt/forms/coincontroldialog.ui
    src/qt/forms/editaddressdialog.ui
    src/qt/forms/helpmessagedialog.ui
    src/qt/forms/intro.ui
    src/qt/forms/openuridialog.ui
    src/qt/forms/optionsdialog.ui
    src/qt/forms/overviewpage.ui
    src/qt/forms/receivecoinsdialog.ui
    src/qt/forms/receiverequestdialog.ui
    src/qt/forms/rpcconsole.ui
    src/qt/forms/sendcoinsdialog.ui
    src/qt/forms/sendcoinsentry.ui
    src/qt/forms/signverifymessagedialog.ui
    src/qt/forms/transactiondescdialog.ui
    src/qt/locale/bitcoin_ach.ts
    src/qt/locale/bitcoin_af_ZA.ts
    src/qt/locale/bitcoin_ar.ts
    src/qt/locale/bitcoin_be_BY.ts
    src/qt/locale/bitcoin_bg.ts
    src/qt/locale/bitcoin_bs.ts
    src/qt/locale/bitcoin_ca.ts
    src/qt/locale/bitcoin_ca@valencia.ts
    src/qt/locale/bitcoin_ca_ES.ts
    src/qt/locale/bitcoin_cmn.ts
    src/qt/locale/bitcoin_cs.ts
    src/qt/locale/bitcoin_cy.ts
    src/qt/locale/bitcoin_da.ts
    src/qt/locale/bitcoin_de.ts
    src/qt/locale/bitcoin_el_GR.ts
    src/qt/locale/bitcoin_en.ts
    src/qt/locale/bitcoin_eo.ts
    src/qt/locale/bitcoin_es.ts
    src/qt/locale/bitcoin_es_CL.ts
    src/qt/locale/bitcoin_es_DO.ts
    src/qt/locale/bitcoin_es_MX.ts
    src/qt/locale/bitcoin_es_UY.ts
    src/qt/locale/bitcoin_et.ts
    src/qt/locale/bitcoin_eu_ES.ts
    src/qt/locale/bitcoin_fa.ts
    src/qt/locale/bitcoin_fa_IR.ts
    src/qt/locale/bitcoin_fi.ts
    src/qt/locale/bitcoin_fr.ts
    src/qt/locale/bitcoin_fr_CA.ts
    src/qt/locale/bitcoin_gl.ts
    src/qt/locale/bitcoin_gu_IN.ts
    src/qt/locale/bitcoin_he.ts
    src/qt/locale/bitcoin_hi_IN.ts
    src/qt/locale/bitcoin_hr.ts
    src/qt/locale/bitcoin_hu.ts
    src/qt/locale/bitcoin_id_ID.ts
    src/qt/locale/bitcoin_it.ts
    src/qt/locale/bitcoin_ja.ts
    src/qt/locale/bitcoin_ka.ts
    src/qt/locale/bitcoin_kk_KZ.ts
    src/qt/locale/bitcoin_ko_KR.ts
    src/qt/locale/bitcoin_ky.ts
    src/qt/locale/bitcoin_la.ts
    src/qt/locale/bitcoin_lt.ts
    src/qt/locale/bitcoin_lv_LV.ts
    src/qt/locale/bitcoin_mn.ts
    src/qt/locale/bitcoin_ms_MY.ts
    src/qt/locale/bitcoin_nb.ts
    src/qt/locale/bitcoin_nl.ts
    src/qt/locale/bitcoin_pam.ts
    src/qt/locale/bitcoin_pl.ts
    src/qt/locale/bitcoin_pt_BR.ts
    src/qt/locale/bitcoin_pt_PT.ts
    src/qt/locale/bitcoin_ro_RO.ts
    src/qt/locale/bitcoin_ru.ts
    src/qt/locale/bitcoin_sah.ts
    src/qt/locale/bitcoin_sk.ts
    src/qt/locale/bitcoin_sl_SI.ts
    src/qt/locale/bitcoin_sq.ts
    src/qt/locale/bitcoin_sr.ts
    src/qt/locale/bitcoin_sv.ts
    src/qt/locale/bitcoin_th_TH.ts
    src/qt/locale/bitcoin_tr.ts
    src/qt/locale/bitcoin_uk.ts
    src/qt/locale/bitcoin_ur_PK.ts
    src/qt/locale/bitcoin_uz@Cyrl.ts
    src/qt/locale/bitcoin_vi.ts
    src/qt/locale/bitcoin_vi_VN.ts
    src/qt/locale/bitcoin_zh_CN.ts
    src/qt/locale/bitcoin_zh_HK.ts
    src/qt/locale/bitcoin_zh_TW.ts
    src/qt/res/icons/about.png
    src/qt/res/icons/about_qt.png
    src/qt/res/icons/add.png
    src/qt/res/icons/address-book.png
    src/qt/res/icons/bitcoin.icns
    src/qt/res/icons/bitcoin.ico
    src/qt/res/icons/bitcoin.png
    src/qt/res/icons/clock1.png
    src/qt/res/icons/clock2.png
    src/qt/res/icons/clock3.png
    src/qt/res/icons/clock4.png
    src/qt/res/icons/clock5.png
    src/qt/res/icons/configure.png
    src/qt/res/icons/connect0.png
    src/qt/res/icons/connect1.png
    src/qt/res/icons/connect2.png
    src/qt/res/icons/connect3.png
    src/qt/res/icons/connect4.png
    src/qt/res/icons/debugwindow.png
    src/qt/res/icons/edit.png
    src/qt/res/icons/editcopy.png
    src/qt/res/icons/editpaste.png
    src/qt/res/icons/export.png
    src/qt/res/icons/eye.png
    src/qt/res/icons/eye_minus.png
    src/qt/res/icons/eye_plus.png
    src/qt/res/icons/filesave.png
    src/qt/res/icons/history.png
    src/qt/res/icons/info.png
    src/qt/res/icons/key.png
    src/qt/res/icons/lock_closed.png
    src/qt/res/icons/lock_open.png
    src/qt/res/icons/open.png
    src/qt/res/icons/overview.png
    src/qt/res/icons/quit.png
    src/qt/res/icons/receive.png
    src/qt/res/icons/remove.png
    src/qt/res/icons/send.png
    src/qt/res/icons/synced.png
    src/qt/res/icons/transaction0.png
    src/qt/res/icons/transaction2.png
    src/qt/res/icons/transaction_conflicted.png
    src/qt/res/icons/tx_inout.png
    src/qt/res/icons/tx_input.png
    src/qt/res/icons/tx_mined.png
    src/qt/res/icons/tx_output.png
    src/qt/res/icons/verify.png
    src/qt/res/icons/warning.png
    src/qt/res/movies/makespinner.sh
    src/qt/res/movies/spinner-000.png
    src/qt/res/movies/spinner-001.png
    src/qt/res/movies/spinner-002.png
    src/qt/res/movies/spinner-003.png
    src/qt/res/movies/spinner-004.png
    src/qt/res/movies/spinner-005.png
    src/qt/res/movies/spinner-006.png
    src/qt/res/movies/spinner-007.png
    src/qt/res/movies/spinner-008.png
    src/qt/res/movies/spinner-009.png
    src/qt/res/movies/spinner-010.png
    src/qt/res/movies/spinner-011.png
    src/qt/res/movies/spinner-012.png
    src/qt/res/movies/spinner-013.png
    src/qt/res/movies/spinner-014.png
    src/qt/res/movies/spinner-015.png
    src/qt/res/movies/spinner-016.png
    src/qt/res/movies/spinner-017.png
    src/qt/res/movies/spinner-018.png
    src/qt/res/movies/spinner-019.png
    src/qt/res/movies/spinner-020.png
    src/qt/res/movies/spinner-021.png
    src/qt/res/movies/spinner-022.png
    src/qt/res/movies/spinner-023.png
    src/qt/res/movies/spinner-024.png
    src/qt/res/movies/spinner-025.png
    src/qt/res/movies/spinner-026.png
    src/qt/res/movies/spinner-027.png
    src/qt/res/movies/spinner-028.png
    src/qt/res/movies/spinner-029.png
    src/qt/res/movies/spinner-030.png
    src/qt/res/movies/spinner-031.png
    src/qt/res/movies/spinner-032.png
    src/qt/res/movies/spinner-033.png
    src/qt/res/movies/spinner-034.png
    src/qt/res/movies/spinner-035.png
    src/qt/res/src/bitcoin.svg
    src/qt/res/src/clock_0.svg
    src/qt/res/src/clock_1.svg
    src/qt/res/src/clock_2.svg
    src/qt/res/src/clock_3.svg
    src/qt/res/src/clock_4.svg
    src/qt/res/src/connect-0.svg
    src/qt/res/src/connect-1.svg
    src/qt/res/src/connect-2.svg
    src/qt/res/src/connect-3.svg
    src/qt/res/src/mine.svg
    src/qt/res/src/qt.svg
    src/qt/res/src/tx_in.svg
    src/qt/res/src/tx_inout.svg
    src/qt/res/src/verify.svg
    src/qt/res/bitcoin-qt-res.rc
    src/qt/res/spinner.png
    src/qt/test/Makefile
    src/qt/test/paymentrequestdata.h
    src/qt/test/paymentservertests.cpp
    src/qt/test/paymentservertests.h
    src/qt/test/test_main.cpp
    src/qt/test/uritests.cpp
    src/qt/test/uritests.h
    src/qt/addressbookpage.cpp
    src/qt/addressbookpage.h
    src/qt/addresstablemodel.cpp
    src/qt/addresstablemodel.h
    src/qt/askpassphrasedialog.cpp
    src/qt/askpassphrasedialog.h
    src/qt/bitcoin.cpp
    src/qt/bitcoin.qrc
    src/qt/bitcoin_locale.qrc
    src/qt/bitcoinaddressvalidator.cpp
    src/qt/bitcoinaddressvalidator.h
    src/qt/bitcoinamountfield.cpp
    src/qt/bitcoinamountfield.h
    src/qt/bitcoingui.cpp
    src/qt/bitcoingui.h
    src/qt/bitcoinstrings.cpp
    src/qt/bitcoinunits.cpp
    src/qt/bitcoinunits.h
    src/qt/clientmodel.cpp
    src/qt/clientmodel.h
    src/qt/coincontroldialog.cpp
    src/qt/coincontroldialog.h
    src/qt/coincontroltreewidget.cpp
    src/qt/coincontroltreewidget.h
    src/qt/csvmodelwriter.cpp
    src/qt/csvmodelwriter.h
    src/qt/editaddressdialog.cpp
    src/qt/editaddressdialog.h
    src/qt/guiconstants.h
    src/qt/guiutil.cpp
    src/qt/guiutil.h
    src/qt/intro.cpp
    src/qt/intro.h
    src/qt/macdockiconhandler.h
    src/qt/macdockiconhandler.mm
    src/qt/macnotificationhandler.h
    src/qt/macnotificationhandler.mm
    src/qt/Makefile
    src/qt/networkstyle.cpp
    src/qt/networkstyle.h
    src/qt/notificator.cpp
    src/qt/notificator.h
    src/qt/openuridialog.cpp
    src/qt/openuridialog.h
    src/qt/optionsdialog.cpp
    src/qt/optionsdialog.h
    src/qt/optionsmodel.cpp
    src/qt/optionsmodel.h
    src/qt/overviewpage.cpp
    src/qt/overviewpage.h
    src/qt/paymentrequest.proto
    src/qt/paymentrequestplus.cpp
    src/qt/paymentrequestplus.h
    src/qt/paymentserver.cpp
    src/qt/paymentserver.h
    src/qt/peertablemodel.cpp
    src/qt/peertablemodel.h
    src/qt/qvalidatedlineedit.cpp
    src/qt/qvalidatedlineedit.h
    src/qt/qvaluecombobox.cpp
    src/qt/qvaluecombobox.h
    src/qt/receivecoinsdialog.cpp
    src/qt/receivecoinsdialog.h
    src/qt/receiverequestdialog.cpp
    src/qt/receiverequestdialog.h
    src/qt/recentrequeststablemodel.cpp
    src/qt/recentrequeststablemodel.h
    src/qt/rpcconsole.cpp
    src/qt/rpcconsole.h
    src/qt/scicon.cpp
    src/qt/scicon.h
    src/qt/sendcoinsdialog.cpp
    src/qt/sendcoinsdialog.h
    src/qt/sendcoinsentry.cpp
    src/qt/sendcoinsentry.h
    src/qt/signverifymessagedialog.cpp
    src/qt/signverifymessagedialog.h
    src/qt/splashscreen.cpp
    src/qt/splashscreen.h
    src/qt/trafficgraphwidget.cpp
    src/qt/trafficgraphwidget.h
    src/qt/transactiondesc.cpp
    src/qt/transactiondesc.h
    src/qt/transactiondescdialog.cpp
    src/qt/transactiondescdialog.h
    src/qt/transactionfilterproxy.cpp
    src/qt/transactionfilterproxy.h
    src/qt/transactionrecord.cpp
    src/qt/transactionrecord.h
    src/qt/transactiontablemodel.cpp
    src/qt/transactiontablemodel.h
    src/qt/transactionview.cpp
    src/qt/transactionview.h
    src/qt/utilitydialog.cpp
    src/qt/utilitydialog.h
    src/qt/walletframe.cpp
    src/qt/walletframe.h
    src/qt/walletmodel.cpp
    src/qt/walletmodel.h
    src/qt/walletmodeltransaction.cpp
    src/qt/walletmodeltransaction.h
    src/qt/walletview.cpp
    src/qt/walletview.h
    src/qt/winshutdownmonitor.cpp
    src/qt/winshutdownmonitor.h
    src/script/bitcoinconsensus.cpp
    src/script/bitcoinconsensus.h
    src/script/interpreter.cpp
    src/script/interpreter.h
    src/script/script.cpp
    src/script/script.h
    src/script/script_error.cpp
    src/script/script_error.h
    src/script/sigcache.cpp
    src/script/sigcache.h
    src/script/sign.cpp
    src/script/sign.h
    src/script/standard.cpp
    src/script/standard.h
    src/secp256k1/build-aux/m4/bitcoin_secp.m4
    src/secp256k1/include/secp256k1.h
    src/secp256k1/obj/.gitignore
    src/secp256k1/src/java/org/bitcoin/NativeSecp256k1.java
    src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.c
    src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.h
    src/secp256k1/src/bench.h
    src/secp256k1/src/bench_internal.c
    src/secp256k1/src/bench_recover.c
    src/secp256k1/src/bench_sign.c
    src/secp256k1/src/bench_verify.c
    src/secp256k1/src/ecdsa.h
    src/secp256k1/src/ecdsa_impl.h
    src/secp256k1/src/eckey.h
    src/secp256k1/src/eckey_impl.h
    src/secp256k1/src/ecmult.h
    src/secp256k1/src/ecmult_gen.h
    src/secp256k1/src/ecmult_gen_impl.h
    src/secp256k1/src/ecmult_impl.h
    src/secp256k1/src/field.h
    src/secp256k1/src/field_10x26.h
    src/secp256k1/src/field_10x26_impl.h
    src/secp256k1/src/field_5x52.h
    src/secp256k1/src/field_5x52_asm_impl.h
    src/secp256k1/src/field_5x52_impl.h
    src/secp256k1/src/field_5x52_int128_impl.h
    src/secp256k1/src/field_impl.h
    src/secp256k1/src/group.h
    src/secp256k1/src/group_impl.h
    src/secp256k1/src/hash.h
    src/secp256k1/src/hash_impl.h
    src/secp256k1/src/num.h
    src/secp256k1/src/num_gmp.h
    src/secp256k1/src/num_gmp_impl.h
    src/secp256k1/src/num_impl.h
    src/secp256k1/src/scalar.h
    src/secp256k1/src/scalar_4x64.h
    src/secp256k1/src/scalar_4x64_impl.h
    src/secp256k1/src/scalar_8x32.h
    src/secp256k1/src/scalar_8x32_impl.h
    src/secp256k1/src/scalar_impl.h
    src/secp256k1/src/secp256k1.c
    src/secp256k1/src/testrand.h
    src/secp256k1/src/testrand_impl.h
    src/secp256k1/src/tests.c
    src/secp256k1/src/util.h
    src/secp256k1/.gitignore
    src/secp256k1/.travis.yml
    src/secp256k1/autogen.sh
    src/secp256k1/configure.ac
    src/secp256k1/COPYING
    src/secp256k1/libsecp256k1.pc.in
    src/secp256k1/Makefile.am
    src/secp256k1/README.md
    src/secp256k1/TODO
    src/support/allocators/secure.h
    src/support/allocators/zeroafterfree.h
    src/support/cleanse.cpp
    src/support/cleanse.h
    src/support/pagelocker.cpp
    src/support/pagelocker.h
    src/test/data/alertTests.raw
    src/test/data/base58_encode_decode.json
    src/test/data/base58_keys_invalid.json
    src/test/data/base58_keys_valid.json
    src/test/data/bitcoin-util-test.json
    src/test/data/blanktx.hex
    src/test/data/g1_compressed.json
    src/test/data/g2_compressed.json
    src/test/data/merkle_path.json
    src/test/data/merkle_roots.json
    src/test/data/merkle_roots_empty.json
    src/test/data/merkle_serialization.json
    src/test/data/merkle_witness_serialization.json
    src/test/data/README.md
    src/test/data/script_invalid.json
    src/test/data/script_valid.json
    src/test/data/sighash.json
    src/test/data/tt-delin1-out.hex
    src/test/data/tt-delout1-out.hex
    src/test/data/tt-locktime317000-out.hex
    src/test/data/tx394b54bb.hex
    src/test/data/tx_invalid.json
    src/test/data/tx_valid.json
    src/test/data/txcreate1.hex
    src/test/data/txcreate2.hex
    src/test/data/txcreatesign.hex
    src/test/accounting_tests.cpp
    src/test/addrman_tests.cpp
    src/test/alert_tests.cpp
    src/test/allocator_tests.cpp
    src/test/arith_uint256_tests.cpp
    src/test/base32_tests.cpp
    src/test/base58_tests.cpp
    src/test/base64_tests.cpp
    src/test/bctest.py
    src/test/bignum.h
    src/test/bip32_tests.cpp
    src/test/bitcoin-util-test.py
    src/test/bloom_tests.cpp
    src/test/buildenv.py.in
    src/test/checkblock_tests.cpp
    src/test/Checkpoints_tests.cpp
    src/test/coins_tests.cpp
    src/test/compress_tests.cpp
    src/test/crypto_tests.cpp
    src/test/DoS_tests.cpp
    src/test/equihash_tests.cpp
    src/test/getarg_tests.cpp
    src/test/hash_tests.cpp
    src/test/key_tests.cpp
    src/test/main_tests.cpp
    src/test/Makefile
    src/test/mempool_tests.cpp
    src/test/miner_tests.cpp
    src/test/mruset_tests.cpp
    src/test/multisig_tests.cpp
    src/test/netbase_tests.cpp
    src/test/pmt_tests.cpp
    src/test/policyestimator_tests.cpp
    src/test/pow_tests.cpp
    src/test/README.md
    src/test/reverselock_tests.cpp
    src/test/rpc_tests.cpp
    src/test/rpc_wallet_tests.cpp
    src/test/sanity_tests.cpp
    src/test/scheduler_tests.cpp
    src/test/script_P2SH_tests.cpp
    src/test/script_tests.cpp
    src/test/scriptnum_tests.cpp
    src/test/serialize_tests.cpp
    src/test/sha256compress_tests.cpp
    src/test/sighash_tests.cpp
    src/test/sigopcount_tests.cpp
    src/test/skiplist_tests.cpp
    src/test/test_bitcoin.cpp
    src/test/test_bitcoin.h
    src/test/timedata_tests.cpp
    src/test/transaction_tests.cpp
    src/test/uint256_tests.cpp
    src/test/univalue_tests.cpp
    src/test/util_tests.cpp
    src/univalue/gen.cpp
    src/univalue/univalue.cpp
    src/univalue/univalue.h
    src/univalue/univalue_escapes.h
    src/univalue/univalue_read.cpp
    src/univalue/univalue_write.cpp
    src/wallet/gtest/test_wallet.cpp
    src/wallet/test/wallet_tests.cpp
    src/wallet/asyncrpcoperation_sendmany.cpp
    src/wallet/asyncrpcoperation_sendmany.h
    src/wallet/crypter.cpp
    src/wallet/crypter.h
    src/wallet/db.cpp
    src/wallet/db.h
    src/wallet/rpcdump.cpp
    src/wallet/rpcwallet.cpp
    src/wallet/wallet.cpp
    src/wallet/wallet.h
    src/wallet/wallet_ismine.cpp
    src/wallet/wallet_ismine.h
    src/wallet/walletdb.cpp
    src/wallet/walletdb.h
    src/zcash/circuit/commitment.tcc
    src/zcash/circuit/gadget.tcc
    src/zcash/circuit/merkle.tcc
    src/zcash/circuit/note.tcc
    src/zcash/circuit/prfs.tcc
    src/zcash/circuit/utils.tcc
    src/zcash/Address.cpp
    src/zcash/Address.hpp
    src/zcash/GenerateParams.cpp
    src/zcash/IncrementalMerkleTree.cpp
    src/zcash/IncrementalMerkleTree.hpp
    src/zcash/JoinSplit.cpp
    src/zcash/JoinSplit.hpp
    src/zcash/Note.cpp
    src/zcash/Note.hpp
    src/zcash/NoteEncryption.cpp
    src/zcash/NoteEncryption.hpp
    src/zcash/prf.cpp
    src/zcash/prf.h
    src/zcash/Proof.cpp
    src/zcash/Proof.hpp
    src/zcash/util.cpp
    src/zcash/util.h
    src/zcash/Zcash.h
    src/.clang-format
    src/addrman.cpp
    src/addrman.h
    src/alert.cpp
    src/alert.h
    src/alertkeys.h
    src/amount.cpp
    src/amount.h
    src/arith_uint256.cpp
    src/arith_uint256.h
    src/asyncrpcoperation.cpp
    src/asyncrpcoperation.h
    src/asyncrpcqueue.cpp
    src/asyncrpcqueue.h
    src/base58.cpp
    src/base58.h
    src/bitcoin-cli-res.rc
    src/bitcoin-cli.cpp
    src/bitcoin-tx-res.rc
    src/bitcoin-tx.cpp
    src/bitcoind-res.rc
    src/bitcoind.cpp
    src/bloom.cpp
    src/bloom.h
    src/chain.cpp
    src/chain.h
    src/chainparams.cpp
    src/chainparams.h
    src/chainparamsbase.cpp
    src/chainparamsbase.h
    src/chainparamsseeds.h
    src/checkpoints.cpp
    src/checkpoints.h
    src/checkqueue.h
    src/clientversion.cpp
    src/clientversion.h
    src/coincontrol.h
    src/coins.cpp
    src/coins.h
    src/compat.h
    src/compressor.cpp
    src/compressor.h
    src/core_io.h
    src/core_read.cpp
    src/core_write.cpp
    src/eccryptoverify.cpp
    src/eccryptoverify.h
    src/ecwrapper.cpp
    src/ecwrapper.h
    src/hash.cpp
    src/hash.h
    src/init.cpp
    src/init.h
    src/key.cpp
    src/key.h
    src/keystore.cpp
    src/keystore.h
    src/leveldbwrapper.cpp
    src/leveldbwrapper.h
    src/limitedmap.h
    src/main.cpp
    src/main.h
    src/Makefile.am
    src/Makefile.gtest.include
    src/Makefile.qt.include
    src/Makefile.qttest.include
    src/Makefile.test.include
    src/Makefile.zcash.include
    src/memusage.h
    src/merkleblock.cpp
    src/merkleblock.h
    src/miner.cpp
    src/miner.h
    src/mruset.h
    src/net.cpp
    src/net.h
    src/netbase.cpp
    src/netbase.h
    src/noui.cpp
    src/noui.h
    src/pow.cpp
    src/pow.h
    src/protocol.cpp
    src/protocol.h
    src/pubkey.cpp
    src/pubkey.h
    src/random.cpp
    src/random.h
    src/rest.cpp
    src/reverselock.h
    src/rpcblockchain.cpp
    src/rpcclient.cpp
    src/rpcclient.h
    src/rpcmining.cpp
    src/rpcmisc.cpp
    src/rpcnet.cpp
    src/rpcprotocol.cpp
    src/rpcprotocol.h
    src/rpcrawtransaction.cpp
    src/rpcserver.cpp
    src/rpcserver.h
    src/scheduler.cpp
    src/scheduler.h
    src/sendalert.cpp
    src/serialize.h
    src/standaloneminer.cpp
    src/streams.h
    src/sync.cpp
    src/sync.h
    src/threadsafety.h
    src/timedata.cpp
    src/timedata.h
    src/tinyformat.h
    src/txdb.cpp
    src/txdb.h
    src/txmempool.cpp
    src/txmempool.h
    src/ui_interface.h
    src/uint252.h
    src/uint256.cpp
    src/uint256.h
    src/undo.h
    src/util.cpp
    src/util.h
    src/utilmoneystr.cpp
    src/utilmoneystr.h
    src/utilstrencodings.cpp
    src/utilstrencodings.h
    src/utiltime.cpp
    src/utiltime.h
    src/validationinterface.cpp
    src/validationinterface.h
    src/version.h
    src/zcbenchmarks.cpp
    src/zcbenchmarks.h
    zcutil/build.sh
    zcutil/cleanup-tags.sh
    zcutil/fetch-params.sh
    .gitattributes
    .gitignore
    .travis.yml
    autogen.sh
    code_of_conduct.md
    configure.ac
    COPYING
    INSTALL
    libbitcoinconsensus.pc.in
    Makefile.am
    README.md src/lib/stacktrace.h)

add_executable(zcash_standalone_miner ${SOURCE_FILES})